--- a/frontend/templates/admin_login.html
+++ b/frontend/templates/admin_login.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
-{% block title %}User Login{% endblock %}
+{% block title %}Admin Login{% endblock %}
 {% block content %}
-    <h2>User Login</h2>
+    <h2>Admin Login</h2>
     <form method="POST">
-        <input type="email" name="email" placeholder="Email" required>
+        <input type="email" name="email" placeholder="Admin Email" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
     </form>
-    <br>
-    <a href="{{ url_for('signup') }}">Don't have an account? Signup</a>
 {% endblock %}
