--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
-
-{% block title %}Home - Vehicle Rental System{% endblock %}
-
+{% block title %}Welcome{% endblock %}
 {% block content %}
-  <h1>Welcome to the Vehicle Rental System</h1>
-  <p>Please login or register to access our services.</p>
+    <h1>Welcome to the Vehicle Rental System</h1>
+    <p>Please choose an option:</p>
+    <a href="{{ url_for('login') }}">User Login</a> |
+    <a href="{{ url_for('signup') }}">Signup</a> |
+    <a href="{{ url_for('admin_login') }}">Admin Login</a>
 {% endblock %}
