--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -1,9 +1,21 @@
 {% extends "base.html" %}
 {% block title %}Welcome{% endblock %}
 {% block content %}
+
+<div class='home'>
     <h1>Welcome to the Vehicle Rental System</h1>
-    <p>Please choose an option:</p>
-    <a href="{{ url_for('login') }}">User Login</a> |
-    <a href="{{ url_for('signup') }}">Signup</a> |
-    <a href="{{ url_for('admin_login') }}">Admin Login</a>
+    <p>Choose from a variety of vehicles for your journey</p>
+   <div class="optionlist">
+    <div class="option">
+        <a href="{{ url_for('login') }}">User Login</a>
+    </div>
+    <div class="option"> 
+        <a href="{{ url_for('signup') }}">Signup</a>
+    </div>
+    <div class="option">
+        <a href="{{ url_for('admin_login') }}">Admin Login</a>
+    </div>
+   </div>
+</div>
+
 {% endblock %}
