--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %}
 {% block title %}User Login{% endblock %}
 {% block content %}
+
+<div class="login">
     <h2>User Login</h2>
     <form method="POST">
         <input type="email" name="email" placeholder="Email" required>
         <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+        <div class="submit">
+            <button type="submit" >Login</button>
+        </div>
+
+        
     </form>
     <br>
-    <a href="{{ url_for('signup') }}">Don't have an account? Signup</a>
+    <a href="{{ url_for('signup') }}" class="alternate">Don't have an account? Signup</a>
+</div>
 {% endblock %}
