--- a/frontend/templates/signup.html
+++ b/frontend/templates/signup.html
@@ -1,13 +1,18 @@
 {% extends "base.html" %}
 {% block title %}User Signup{% endblock %}
 {% block content %}
+<div class="signup">
     <h2>User Signup</h2>
     <form method="POST">
         <input type="text" name="name" placeholder="Full Name" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Signup</button>
+        <div class="submit">
+            <button type="submit">Signup</button>
+        </div>
     </form>
     <br>
-    <a href="{{ url_for('login') }}">Already have an account? Login</a>
+    <a class="alternate" href="{{ url_for('login') }}">Already have an account? Login</a>
+</div>
+
 {% endblock %}
