--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -46,7 +46,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2023 Vehicle Rental System. All rights reserved.</p>
+      <p>&copy; </p>
     </div>
   </footer>
 
